--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,7 @@ code {
   height: 450px;
   object-fit: cover
 }
+.bob {
+  background: rgb(238,174,202);
+  background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+}
