--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,6 @@ code {
   background: rgb(238,174,202);
   background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
 }
+.pointer {
+  cursor: pointer;
+}
